--- a/package.json
+++ b/package.json
@@ -8,8 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
+    "clsx": "^1.1.1",
+    "framer-motion": "^4.1.11",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.4",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "autoprefixer": "^10.2.5",
+    "eslint": "^7.25.0",
+    "eslint-plugin-react": "^7.23.2",
+    "postcss": "^8.2.13",
+    "tailwindcss": "^2.1.2",
+    "typescript": "^4.2.4"
   }
 }
