--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@heroicons/react": "^1.0.1",
     "clsx": "^1.1.1",
     "framer-motion": "^4.1.11",
-    "next": "10.2.0",
+    "next": "^12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-syntax-highlighter": "^15.4.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.4",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "autoprefixer": "^10.2.5",
